--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,18 @@ button {
     width: 80px;
     margin-top: 4px;
 }
+
+.progress-bar {
+    width: 500px;
+    background-color: #f0f0f0;
+    height: 30px;
+    margin-bottom: 10px;
+    border-radius: 15px;
+}
+
+.progress {
+    width: 0px;
+    height: 100%;
+    background-color: #4caf50;
+    transition: width 0.3s ease;
+}
