--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@ button {
 .progress {
     width: 0px;
     height: 100%;
-    background-color: #4caf50;
+    background-color: #f0f0f0;
     transition: width 0.3s ease;
+    border-radius: 15px;
 }
